--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,6 +15,8 @@
 
     </p>
     <a href="/runners" class="btn btn-primary">View Runners</a>
+    <a href="/races" class="btn btn-primary">View Races</a>
+
 </div>
 </body>
 </html>
