addRunner api működik, submit form nem.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,8 +14,10 @@
     <p>
 
     </p>
+    <a href="/addRunner" class="btn btn-primary">Add Runner</a>
     <a href="/runners" class="btn btn-primary">View Runners</a>
     <a href="/races" class="btn btn-primary">View Races</a>
+
 
 </div>
 </body>
